cluster/jump/ssh-jump-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ssh
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ssh
  namespace: ssh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssh
  template:
    metadata:
      labels:
        app: ssh
    spec:
      containers:
      - name: ssh
        image: amitkshirsagar13/k8s-ssh:latest
        imagePullPolicy: Always
        ports:
          - name: ssh-port
            containerPort: 22
        volumeMounts:
          - name: docker-socket
            readOnly: true
            mountPath: /var/run/docker.sock
          - name: jenkins-home
            mountPath: /var/jenkins_home
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: jenkins-home
          hostPath:
            path: /data/jenkins_home
        - name: data
          hostPath:
            path: /data
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: slave
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: jnlp
  selector:
    app: jenkins
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  tls:
  - hosts:
    - jenkins.gce.k8m.k8cluster.io
    - jenkins.gce.k8n1.k8cluster.io
    secretName: jenkins-secret
  rules:
  - host: jenkins.gce.k8m.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
  - host: jenkins.gce.k8n1.k8cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 8080
